crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_data_unnamed_fields.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T> ::thread_aware::ThreadAware for TupleWithPhantom<T>
where
    core::marker::PhantomData<T>: ::thread_aware::ThreadAware,
{
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<&::thread_aware::Thread>,
        __thread_aware_destination: &::thread_aware::Thread,
    ) {
        ::thread_aware::ThreadAware::relocate(
            &mut self.0,
            __thread_aware_source,
            __thread_aware_destination,
        );
        ::thread_aware::ThreadAware::relocate(
            &mut self.1,
            __thread_aware_source,
            __thread_aware_destination,
        );
    }
}
