crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_only_generic_gets_marker_predicate.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: ::thread_aware::ThreadAware, U> ::thread_aware::ThreadAware
for DirectPhantom<T, U>
where
    core::marker::PhantomData<U>: ::thread_aware::ThreadAware,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(&mut self.0, source, destination);
        ::thread_aware::ThreadAware::relocate(&mut self.1, source, destination);
    }
}
