crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_only_generic_gets_self_send_predicate.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: ::thread_aware::ThreadAware, U> ::thread_aware::ThreadAware
for DirectPhantom<T, U>
where
    DirectPhantom<T, U>: ::core::marker::Send,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(&mut self.0, source, destination);
    }
}
