crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_prebound_send_emits_redundant_predicate.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: Send> ::thread_aware::ThreadAware for PhantomPreBound<T>
where
    T: ::core::marker::Send,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(&mut self.0, source, destination);
    }
}
