crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_prebound_thread_aware_no_send.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: ThreadAware> ::thread_aware::ThreadAware for PhantomPreBoundTa<T> {
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {}
}
