crates/thread_aware_macros_impl/tests/snapshots/derive__phantom_predicate_appends_to_existing_where_clause.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: ::thread_aware::ThreadAware, U> ::thread_aware::ThreadAware for WithWhere<T, U>
where
    T: Clone,
    U: ::core::marker::Send,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(&mut self.value, source, destination);
        ::thread_aware::ThreadAware::relocate(&mut self.marker, source, destination);
    }
}
